<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".frecres.ComoRespActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/beige"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:src="@drawable/back" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="70dp"
                android:text="Como tomar la frecuencia respiratoria manualmente"
                android:textColor="@color/black"
                android:textSize="21dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageM"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginVertical="10dp"
        android:src="@drawable/respiracion" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/respP0"
        android:textColor="@color/black"
        android:textSize="20dp" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="300dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="40dp"
                    android:background="@drawable/circle_como"
                    android:paddingHorizontal="20dp" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:background="@drawable/circle_como"
                    android:paddingHorizontal="20dp" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/circle_como"
                    android:paddingHorizontal="20dp" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:background="@drawable/circle_link"
                    android:paddingHorizontal="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/respP1"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/respP2"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/respP3"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/link"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>