<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/beige"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="70dp"
            android:text="Chat"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_menu"
                android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginVertical="10dp"
                        android:text="@string/msj1"
                        android:textColor="@color/black"
                        android:textSize="20dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_menu"
                android:layout_marginLeft="130dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/msj2"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/crearcuenta" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_menu"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:text="@string/msj3"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>